--- a/app/styles/industry-detail.css
+++ b/app/styles/industry-detail.css
@@ -66,7 +66,7 @@
   display: block;
   font-size: 24px;
   font-weight: 900;
-  color: #00c684;
+  color: #007a52;
   margin-bottom: 4px;
 }
 
